<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/pref_game_settings_title"
        android:key="pref_key_game_settings">
        <EditTextPreference
            android:key="pref_key_player_name"
            android:title="@string/prefs_player_name"
            android:summary="@string/summary_player_name"
            android:dialogTitle="@string/pref_player_name_dialog_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_game_help_title"
        android:key="pref_key_game_help">
        <Preference android:title="@string/prefs_web_page" >
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/peisenke/Risiko" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>